--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,7 +1,20 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
   <head>
+    <!-- bower:css -->
+    <!-- endbower -->
+
+    <!-- inject:css -->
+    <link rel="stylesheet" href="../styles/app.css">
+    <!-- endinject -->
   </head>
   <body>
+    <h1>Hello World, Welcome</h1>
+    <!-- bower:js -->
+    <!-- endbower -->
+
+    <!-- inject:js -->
+    <script src="../scripts/app/app.js"></script>
+    <!-- endinject -->
   </body>
 </html>
