--- a/app/views/index.html
+++ b/app/views/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <!-- bower:css -->
+    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
     <!-- endbower -->
 
     <!-- inject:css -->
@@ -11,6 +12,9 @@
   <body>
     <h1>Hello World, Welcome</h1>
     <!-- bower:js -->
+    <script src="../bower_components/angular/angular.js"></script>
+    <script src="../bower_components/jquery/dist/jquery.js"></script>
+    <script src="../bower_components/tether/dist/js/tether.js"></script>
     <!-- endbower -->
 
     <!-- inject:js -->
