Concat & Uglify bug fixed - wrong src path

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="../styles/app.css">
     <!-- endinject -->
   </head>
-  <body>
+  <body ng-app="app">
     <h1>Hello World, Welcome</h1>
     <!-- bower:js -->
-    <script src="../bower_components/angular/angular.js"></script>
     <script src="../bower_components/jquery/dist/jquery.js"></script>
     <script src="../bower_components/tether/dist/js/tether.js"></script>
+    <script src="../bower_components/angular/angular.js"></script>
     <!-- endbower -->
 
     <!-- inject:js -->
